--- a/acmdb-lab1/build.xml
+++ b/acmdb-lab1/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="simpledb" default="dist" basedir=".">
+<project name="simpledb" default="dist" basedir="..">
     <property name="src" location="src"/>
     <property name="testd" location="test"/>
 
@@ -19,21 +19,21 @@
 
     <path id="classpath.base">
         <pathelement location="${build.src}"/>
-        <pathelement location="${lib}/zql.jar"/>
-        <pathelement location="${lib}/jline-0.9.94.jar"/>
-        <pathelement location="${lib}/mina-core-2.0.4.jar"/>
-        <pathelement location="${lib}/mina-filter-compression-2.0.4.jar"/>
-        <pathelement location="${lib}/slf4j-api-1.6.1.jar"/>
-        <pathelement location="${lib}/slf4j-log4j12-1.6.1.jar"/>
-        <pathelement location="${lib}/log4j-1.2.17.jar"/>
-        <pathelement location="${lib}/jzlib-1.0.7.jar"/>
+        <pathelement location="/acmdb-lab1/lib/zql.jar"/>
+        <pathelement location="/acmdb-lab1/lib/jline-0.9.94.jar"/>
+        <pathelement location="/acmdb-lab1/lib/mina-core-2.0.4.jar"/>
+        <pathelement location="/acmdb-lab1/lib/mina-filter-compression-2.0.4.jar"/>
+        <pathelement location="/acmdb-lab1/lib/slf4j-api-1.6.1.jar"/>
+        <pathelement location="/acmdb-lab1/lib/slf4j-log4j12-1.6.1.jar"/>
+        <pathelement location="/acmdb-lab1/lib/log4j-1.2.17.jar"/>
+        <pathelement location="/acmdb-lab1/lib/jzlib-1.0.7.jar"/>
     </path>
 
     <path id="classpath.test">
         <path refid="classpath.base"/>
         <pathelement location="${build.test}"/>
-        <pathelement location="${lib}/junit-4.5.jar"/>
-        <pathelement location="${lib}/javassist-3.16.1-GA.jar"/>
+        <pathelement location="/acmdb-lab1/lib/junit-4.5.jar"/>
+        <pathelement location="/acmdb-lab1/lib/javassist-3.16.1-GA.jar"/>
     </path>
     <!-- Common macro for compiling Java source -->
     <macrodef name="Compile">
@@ -76,7 +76,7 @@
 
     <target name="eclipse" description="Make current directory an eclipse
     project">
-        <echo file=".project" append="false">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
+        <echo file="../.project" append="false">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;projectDescription&gt;
     &lt;name&gt;simpledb&lt;/name&gt;
     &lt;comment&gt;&lt;/comment&gt;
@@ -93,74 +93,74 @@
         &lt;nature&gt;org.eclipse.jdt.core.javanature&lt;/nature&gt;
     &lt;/natures&gt;
 &lt;/projectDescription&gt;</echo>
-        <echo file=".classpath" append="false">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
+        <echo file="../.classpath" append="false">&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;classpath&gt;
     &lt;classpathentry kind=&quot;src&quot; output=&quot;bin/src&quot; path=&quot;src/java&quot;/&gt;
     &lt;classpathentry kind=&quot;src&quot; output=&quot;bin/test&quot; path=&quot;test&quot;/&gt;
     &lt;classpathentry kind=&quot;con&quot; path=&quot;org.eclipse.jdt.launching.JRE_CONTAINER&quot;/&gt;
     &lt;classpathentry kind=&quot;output&quot; path=&quot;bin/src&quot;/&gt;
     </echo>
-    <if> <available file="${lib}/junit-4.5.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/junit-4.5.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/junit-4.5.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/jline-0.9.94.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/jline-0.9.94.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/jline-0.9.94.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/zql.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/zql.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/zql.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/mina-core-2.0.4.jar" />    <then>
+    <if> <available file="/acmdb-lab1/lib/mina-core-2.0.4.jar" />    <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/mina-core-2.0.4.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/mina-filter-compression-2.0.4.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/mina-filter-compression-2.0.4.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/mina-filter-compression-2.0.4.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/jzlib-1.0.7.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/jzlib-1.0.7.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/jzlib-1.0.7.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/slf4j-api-1.6.1.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/slf4j-api-1.6.1.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/slf4j-api-1.6.1.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/slf4j-log4j12-1.6.1.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/slf4j-log4j12-1.6.1.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/slf4j-log4j12-1.6.1.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/log4j-1.2.17.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/log4j-1.2.17.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/log4j-1.2.17.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <if> <available file="${lib}/javassist-3.16.1-GA.jar" /> <then>
+    <if> <available file="/acmdb-lab1/lib/javassist-3.16.1-GA.jar" /> <then>
             <echo file=".classpath" append="true">
                 &lt;classpathentry kind=&quot;lib&quot; path=&quot;lib/javassist-3.16.1-GA.jar&quot;/&gt;
             </echo>
         </then>
     </if>
-    <echo file=".classpath" append="true">
+    <echo file="../.classpath" append="true">
         &lt;/classpath&gt;
     </echo>
     </target>
@@ -170,7 +170,7 @@
             <classpath refid="classpath.base"/>
         </Compile>
     <copy todir="${build}" flatten="true">
-        <fileset dir="${src}">
+        <fileset dir="/acmdb-lab1/src">
             <include name="bin/*.sh"/>
         </fileset>
     </copy>
@@ -297,10 +297,10 @@
     <target name="handin" depends="clean"
         description="Create a tarball of your code to hand in">
         <tar destfile="lab-handin.tar.bz2" compression="bzip2"
-            basedir="." />
+            basedir=".." />
         <echo message="Tarball created!  Please submit 'lab-handin.tar.bz2' per the instructions in the lab document." />
     <subant target="dist">
-        <fileset dir="." includes="build.xml"/>
+        <fileset dir=".." includes="build.xml"/>
     </subant>
     </target>
 
